# SnowDuckAI

./: .gitignore  agent.py  git_handler.py  llm_client.py  notifier.py  pyproject.toml  sandbox_client.py
.github/workflows/: sandbox.yml
.mcp/: config.json  server.py
docs/: byggeplan.md
models/marts/: orders_summary.sql
snowduckai/: __init__.py  agent.py  cli.py  git_handler.py  llm_client.py  notifier.py  sandbox_client.py
snowduckai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/fixtures/dbt_project/: dbt_project.yml  profiles.yml
tests/fixtures/dbt_project/models/marts/: orders_summary.sql
tests/fixtures/dbt_project/models/staging/: stg_customers.sql  stg_orders.sql
tests/fixtures/dbt_project/seeds/: raw_customers.csv  raw_orders.csv
