[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowduckai"
version = "0.1.0"
description = "AI-powered dbt error resolution — diagnose, test, and fix dbt pipeline errors automatically"
readme = "README.md"
authors = [
    { name = "SnowDuckAI Team", email = "team@snowduckai.dev" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
keywords = ["dbt", "data", "analytics", "ai", "debugging", "automation"]

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/snowduckai/snowduckai"
Documentation = "https://github.com/snowduckai/snowduckai#readme"
Repository = "https://github.com/snowduckai/snowduckai"
"Bug Tracker" = "https://github.com/snowduckai/snowduckai/issues"

[project.scripts]
sd = "snowduckai.cli:main"
snowduckai = "snowduckai.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["snowduckai*"]

[tool.setuptools.package-data]
"*" = [".github/workflows/sandbox.yml"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
